<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_bg"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="221dp"
        android:layout_height="79.98dp"
        android:src="@drawable/ic_vgym_logo"
        android:tint="@color/surfaceL"
        android:layout_gravity="center"
        android:layout_marginTop="34dp">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/surfaceL"
        android:fontFamily="@font/raleway_medium"
        android:layout_gravity="center">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:endIconMode="clear_text"
        android:hint="@string/email_hint"
        style="@style/LightInputOverDarkBg"
        android:layout_marginTop="34dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/surfaceL"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:endIconMode="password_toggle"
        android:hint="@string/password_hint"
        style="@style/LightInputOverDarkBg"
        android:layout_marginTop="18.5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/surfaceL"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:backgroundTint="@color/secondary"
        android:letterSpacing="0"
        android:layout_marginTop="43.5dp"
        />

    <TextView
        android:id="@+id/loginUnsplashAttribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/john_fornander_attribution"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        android:alpha="0.65"
        android:layout_marginTop="120dp">
    </TextView>
</LinearLayout>