<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bg"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/welcomeVgymLogo"
        android:layout_width="189dp"
        android:layout_height="68.4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_vgym_logo"
        android:tint="@color/surfaceL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
        android:textColor="@color/surfaceL"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="8"
        android:shadowRadius="8"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="1.6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeVgymLogo">
    </TextView>

    <Button
        android:id="@+id/welcomeLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/secondary"
        android:letterSpacing="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/welcomeContinueOfflineBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/continue_offline"
        android:backgroundTint="@color/primaryL"
        android:letterSpacing="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLoginBtn" />

    <TextView
        android:id="@+id/welcomeRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/no_account_register"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/surfaceL"
        android:fontFamily="@font/raleway_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeContinueOfflineBtn">
    </TextView>

    <TextView
        android:id="@+id/welcomeUnsplashAttribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cathy_pham_attribution"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        android:alpha="0.65"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>